# security-posture-platform

./: .gitignore  README.md  subtree-sources.json
.github/workflows/: validate.yml
security-posture-api/: .gitignore  README.md  derivative-sources.json  function_app.py  local.settings.example.json  pyproject.toml  requirements.txt
security-posture-api/scripts/: verify_public_simulation_stack.py
security-posture-api/src/security_posture_api/: __init__.py  public_request_context.py  public_site_monitor.py  public_traffic_metrics.py  settings.py  traffic_alerts.py  verification_settings.py
security-posture-api/src/security_posture_api/utils/: __init__.py  public_simulation_verifier.py  public_traffic_client.py
security-posture-api/tests/unit/: test_function_app.py  test_public_request_context.py  test_public_simulation_verifier.py  test_public_site_monitor.py  test_public_traffic_client.py  test_public_traffic_metrics.py  test_traffic_alerts.py
security-posture-site/: .env.example  README.md  derivative-sources.json  index.html  package-lock.json  package.json  tsconfig.node.json  vitest.config.ts
security-posture-site/docs/: ryancodes-security-online-concept.md
security-posture-site/src/: App.tsx  styles.css
security-posture-site/src/api/: publicTrafficApi.ts
security-posture-site/src/components/: SecurityPostureSite.test.tsx  SecurityPostureSite.tsx
security-posture-site/src/data/: securitySiteContent.ts
